--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                     </div>
                     <div class="px-6 pt-4 pb-2">
                         <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-                            href="/portafolio">Ver website</a>
+                            href="./portafolio">Ver website</a>
 
                     </div>
                 </div>
                 <div class="max-w-sm min-w-sm rounded overflow-hidden shadow-lg pb-4">
                     <div class="h-64 overflow-hidden">
-                        <img class="w-full object-cover" src="/assets/cafe.png" alt="Sunset in the mountains">
+                        <img class="w-full object-cover" src="./assets/cafe.png" alt="Sunset in the mountains">
                     </div>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2">Restaurante/Cafe</div>
@@ -49,13 +49,13 @@
                     </div>
                     <div class="px-6 pt-4 pb-2">
                         <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-                            href="/restaurante">Ver website</a>
+                            href="./restaurante">Ver website</a>
 
                     </div>
                 </div>
                 <div class="max-w-sm min-w-sm rounded overflow-hidden shadow-lg pb-4">
                     <div class="h-64 overflow-hidden">
-                        <img class="w-full object-cover" src="/assets/startup.png" alt="Sunset in the mountains">
+                        <img class="w-full object-cover" src="./assets/startup.png" alt="Sunset in the mountains">
                     </div>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2">Startup</div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="px-6 pt-4 pb-2">
                         <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-                            href="/startup">Ver website</a>
+                            href="./startup">Ver website</a>
                     </div>
                 </div>
             </div>
