--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="px-6 pt-4 pb-2">
                         <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-                            href="./portafolio">Ver website</a>
+                            href="./Portafolio">Ver website</a>
 
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="px-6 pt-4 pb-2">
                         <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-                            href="./restaurante">Ver website</a>
+                            href="./Restaurante">Ver website</a>
 
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="px-6 pt-4 pb-2">
                         <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-                            href="./startup">Ver website</a>
+                            href="./Startup">Ver website</a>
                     </div>
                 </div>
             </div>
