fix card description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                     </div>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2">Portafolio Personal</div>
-                        <p class="text-gray-700 text-base">
+                        <p class="text-gray-700 text-base w-full text-truncate">
+                            Portafolio personal para mostrar tus habilidades y proyectos. Cuenta con secciones de
+                            contacto, proyectos y habilidades.
+                            Portafolio personal para mostrar tus habilidades y proyectos. Cuenta con secciones de
+                            contacto, proyectos y habilidades.
                             Portafolio personal para mostrar tus habilidades y proyectos. Cuenta con secciones de
                             contacto, proyectos y habilidades.
                         </p>
@@ -42,7 +46,7 @@
                     </div>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2">Restaurante/Cafe</div>
-                        <p class="text-gray-700 text-base">
+                        <p class="text-gray-700 text-base w-full text-truncate">
                             Pagina web para un restaurante o cafe. Cuenta con secciones de menu, contacto, ubicacion y
                             galeria.
                         </p>
@@ -59,7 +63,7 @@
                     </div>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2">Startup</div>
-                        <p class="text-gray-700 text-base">
+                        <p class="text-gray-700 text-base w-full text-truncate">
                             Pagina web para una startup. Cuenta con secciones de contacto, servicios, proyectos y
                             equipo.
                         </p>
